--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Costura.Fody" version="4.1.0" targetFramework="net461" />
+  <package id="Fody" version="6.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net45" />
-  <package id="Pathoschild.Stardew.ModBuildConfig" version="3.1.0" targetFramework="net461" />
+  <package id="Pathoschild.Stardew.ModBuildConfig" version="3.2.1" targetFramework="net461" />
+  <package id="SQLite" version="3.13.0" targetFramework="net461" />
 </packages>
